--- a/src/JwtRefresh/Views/Shared/_Layout.cshtml
+++ b/src/JwtRefresh/Views/Shared/_Layout.cshtml
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>JWT Refresh</title>
     @Styles.Render("~/Content/css")
+    @RenderSection("styles", false)
+
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
@@ -31,12 +33,12 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p></p>
         </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    @RenderSection("scripts", false)
 </body>
 </html>
